--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "smartvote-backend",
   "version": "1.0.0",
   "description": "SmartVote backend with Express.js, MySQL, and Twilio",
-  "main": "database.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node database.js",
-    "dev": "nodemon database.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
