--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,13 +1,12 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "database.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/database.js" }
-    ],
-    "env": {
-      "PORT": "3000"
-    }
+  "version": 2,
+  "builds": [
+    { "src": "index.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.js" }
+  ],
+  "env": {
+    "PORT": "3000"
   }
-  
+}
