--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,5 @@ TWILIO_PHONE_NUMBER=+13258800176
 DB_HOST=mainline.proxy.rlwy.net
 DB_USER=root
 DB_PASSWORD=CLAUvpvEEDmnGmeNKtHQEKawBHNGouHL
-DB_NAME=railway
+DB_NAME=SmartVote
 DB_PORT=3306
