--- a/backend/.env
+++ b/backend/.env
@@ -4,5 +4,5 @@ TWILIO_PHONE_NUMBER=+13258800176
 DB_HOST=sql303.infinityfree.com
 DB_USER=if0_38596250
 DB_PASSWORD=YleYXXPczAEB6Dx
-DB_NAME=smartvote_db
+DB_NAME=if0_38596250_smartvote
 DB_PORT=3306
