--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,14 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.0",
-    "dotenv": "^16.0.3",
-    "cors": "^2.8.5",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.21.2",
+    "mysql2": "^3.6.0",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^3.2.0",
     "twilio": "^4.18.0"
   },
   "devDependencies": {
@@ -21,7 +24,13 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "keywords": ["express", "mysql", "twilio", "sms", "voting"],
-  "author": "Sagnik Saha",
+  "keywords": [
+    "express",
+    "mysql",
+    "twilio",
+    "sms",
+    "voting"
+  ],
+  "author": "Your Name",
   "license": "MIT"
 }
