--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,6 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -31,6 +30,6 @@
     "sms",
     "voting"
   ],
-  "author": "Your Name",
+  "author": "Sagnik Saha", 
   "license": "MIT"
 }
